[package]
name = "onshape-level-gen"
version = "0.1.4"
edition = "2021"
license = "MIT"
description = "An auto level generator for the OnShape VR game"
documentation = "https://docs.rs/onshape-level-gen"

[dependencies]
creak = { version = "*", default-features = false, features = ["vorbis"] }
spectrum-analyzer = "1.2"
rand = "0.8"
thiserror = "1.0"
anyhow = "1.0"

[profile.release]
codegen-units = 1
lto="fat"